1.17b15
	- Fixes Issue 36. A new flag -separator "character" can be specified before
	-attach option to use the specified separator instead of comma. Example:
	-separator ":" -attach "filename, with command.pdf:application/pdf"
	(Dec-07-2013)

	- Fixes Issue 35. Added a 5th field with -attach to specify the encoding
	type. The default encoding type is base64. If no encoding should be used,
	specify the 5th field as "none". Also 4th field must be specified as "none"
	if no content-id will be used. Eample:
	-attach "file.txt,text/plain,a,blah.txt,none,none" -cs utf8
	(Dec-07-2013)

	- Fixess Issue 34. Try the current addrinfo in connect(), mistakenly 
	the first one was used. If getaddrinfo() returned multiple results and 
	if connect() to first address failed, the rest of the addresses were 
	not tried.  Patch sent by Peter Liu. 
	(Nov-27-2013)

	- Fixes Issue 30. Support custom Content-type header and to support 
	Conent-ID. The custom Conent-type can be specified with the option
	-conent-type and the Conent-ID of the attachment can be specified as 
	fifth value of the -attach option. Thanks to skalogryz for supplying 
	the patch.
	(Nov-06-2013).

	- Fixes Issue 26. Added options -4 and -6 to force using IPv4 or IPv6 
	address of the SMTP server. 
	(Oct-20-2013)

	- Added fourth option for -attach flag to specify the attachment name. 
	The default was the attachment filename. Example:
	-attach "/path/foo.txt,text/plain,a,bar.txt", the attchment name will be
	bar.txt instead of foo.txt.

	Note: the attachment filename must be the 4th option, that means you 
	have to specify the attachment type a or i if you want to change the 
	attachment name. Fixes Issue 27.

	(Oct-27-2013)

1.17b14
	- Multiline input with -M was completely broken.
	(Oct-20-2013)

1.17b13
	- Changed Copyright to more flexible BSD from GNU GPL. Added -copyright
	flag.
	(Oct-12-2013)

	- SMTP authentication was broken if the username and passwords are long